# golf-coach-mcp

./: .gitignore  README.md  _smoke.py  http_server.py  pyproject.toml  render.yaml  server.py
